--- a/tv.html
+++ b/tv.html
@@ -1,140 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Document</title>
-    <script defer="defer" src="202.0fab3de93f39b84438af.js"></script>
-    <script defer="defer" src="main.0fab3de93f39b84438af.js"></script>
-    <link href="main.0fab3de93f39b84438af.css" rel="stylesheet">
-</head>
-
-<body>
-    <div class="wrapper">
-        <header>
-            <div class="header">
-                <div class="header__logo"><img src="assets/images/Logo.svg" alt="logo"></div>
-                <nav class="header__links"><a class="header__link active" href="#">Home</a><a class="header__link"
-                        href="#">TV Shows</a><a class="header__link" href="#">Movies</a><a class="header__link"
-                        href="#">Series</a></nav>
-                <div class="header__icons"><a href="#"><img src="assets/images/lupa.svg" alt="lupa"></a><a href="#"><img
-                            src="assets/images/kolokol.svg" alt="kolokol"></a><a href="#"><img
-                            src="assets/images/user.svg" alt="user"></a></div>
-                <div class="burger">
-                    <div class="burger__1"></div>
-                    <div class="burger__2"></div>
-                    <div class="burger__3"></div>
-                    <div class="burger__links"><a href="#">Home</a><a href="#">TV Shows</a><a href="#">Movies</a><a
-                            href="#">Series</a></div>
-                </div>
-            </div>
-        </header>
-        <div class="preview">
-            <div class="preview__info">
-                <div class="preview__title">Zack Snyder's Justice League</div>
-                <div class="preview__description">
-                    <div class="preview__year">2021</div>
-                    <div class="preview__age">18+</div>
-                    <div class="preview__time">4h 2min</div>
-                    <div class="preview__rating">8.8</div>
-                </div>
-                <div class="preview__text">Determined to ensure Superman's ultimate sacrifice was not in vain, Bruce
-                    Wayne aligns forces with Diana Prince with plansto recruit a team of metahumans to protect the world
-                    from an approaching threat of catastrophic proportions.</div>
-                <div class="preview__buttons"><button class="preview__buttons-watch">Watch</button><button
-                        class="preview__buttons-more">More information</button></div>
-            </div>
-            <div class="preview__img"><img src="assets/images/banner.png" alt="banner"></div>
-        </div>
-        <div class="films"><a class="title" href="#">Trending TV Shows</a>
-            <div class="films__items">
-                <div class="films__item"><a href="#"><img src="assets/images/1.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/3.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/4.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/5.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/6.png" alt="films"></a></div>
-            </div>
-        </div>
-        <div class="films"><a class="title" href="#">Trending Movies</a>
-            <div class="films__items">
-                <div class="films__item"><a href="#"><img src="assets/images/1-2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/2-2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/3-2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/4-2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/5-2.png" alt="films"></a></div>
-                <div class="films__item"><a href="#"><img src="assets/images/6-2.png" alt="films"></a></div>
-            </div><button class="films__button">See more</button>
-        </div>
-        <div class="genres"><a class="title" href="#">Popular Genres</a>
-            <div class="genres__items">
-                <div class="genres__item"><a href="#"><img src="assets/images/1-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/2-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/3-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/4-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/5-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/6-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/7-genres.png" alt=""></a></div>
-                <div class="genres__item"><a href="#"><img src="assets/images/8-genres.png" alt=""></a></div>
-            </div>
-        </div>
-        <div class="actors"><a class="title" href="#">Popular Actors &amp; Directors</a>
-            <div class="actors__items">
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-1.png" alt="actor"></a></div>
-                    <div class="actors__name">Samantha Bowen</div>
-                </div>
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-2.png" alt="actor"></a></div>
-                    <div class="actors__name">Rhys Birch</div>
-                </div>
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-3.png" alt="actor"></a></div>
-                    <div class="actors__name">James Holloway</div>
-                </div>
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-4.png" alt="actor"></a></div>
-                    <div class="actors__name">Joshua Walton</div>
-                </div>
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-5.png" alt="actor"></a></div>
-                    <div class="actors__name">Patrick Elliott</div>
-                </div>
-                <div class="actors__item">
-                    <div class="actors__img"><a href="#"><img src="assets/images/actor-6.png" alt="actor"></a></div>
-                    <div class="actors__name">Morgan O'Neill</div>
-                </div>
-            </div>
-        </div>
-        <div class="soon">
-            <div class="soon__baner"><img src="assets/images/baner-2.png" alt="baner"></div>
-            <div class="soon__soon"><img src="assets/images/soon.png" alt="soon"></div>
-        </div>
-        <div class="register">
-            <div class="register__text">Are You New Here ?<br>Don’t wait, Register Now.</div>
-            <div class="register__button">Register Now</div>
-        </div>
-    </div>
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer__logo"><img src="assets/images/Logo-footer.svg" alt="Logo-footer"></div>
-            <div class="footer__links">
-                <div class="footer__links-column"><a class="footer__link" href="#">Voice over and Subtitle</a><a
-                        class="footer__link" href="#">Media Center </a><a class="footer__link" href="#">Privacy</a><a
-                        class="footer__link" href="#">Contact us</a></div>
-                <div class="footer__links-column"><a class="footer__link" href="#">Voice Description</a><a
-                        class="footer__link" href="#">Investor Relations</a><a class="footer__link" href="#">Legal
-                        Provisions</a></div>
-                <div class="footer__links-column"><a class="footer__link" href="#">Help Center</a><a
-                        class="footer__link" href="#">Job Opportunities</a><a class="footer__link" href="#">Cookies
-                        Preferences</a></div>
-                <div class="footer__links-column"><a class="footer__link" href="#">Gift Cards</a><a class="footer__link"
-                        href="#">Terms of Use</a><a class="footer__link" href="#">Corporate Informations</a></div>
-            </div>
-        </div>
-    </footer>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="202.ecb0c7943e8e084624ac.js"></script><script defer="defer" src="main.ecb0c7943e8e084624ac.js"></script><link href="main.ecb0c7943e8e084624ac.css" rel="stylesheet"></head><body><div class="wrapper"><header><div class="header"><div class="header__logo"><img src="assets/images/Logo.svg" alt="logo"></div><nav class="header__links"><a class="header__link active" href="#">Home</a><a class="header__link" href="#">TV Shows</a><a class="header__link" href="#">Movies</a><a class="header__link" href="#">Series</a></nav><div class="header__icons"><a href="#"><img src="assets/images/lupa.svg" alt="lupa"></a><a href="#"><img src="assets/images/kolokol.svg" alt="kolokol"></a><a href="#"><img src="assets/images/user.svg" alt="user"></a></div><div class="burger"><div class="burger__1"></div><div class="burger__2"></div><div class="burger__3"></div><div class="burger__links"><a href="#">Home</a><a href="#">TV Shows</a><a href="#">Movies</a><a href="#">Series</a></div></div></div></header><div class="preview"><div class="preview__info"><div class="preview__title">Zack Snyder's Justice League</div><div class="preview__description"><div class="preview__year">2021</div><div class="preview__age">18+</div><div class="preview__time">4h 2min</div><div class="preview__rating">8.8</div></div><div class="preview__text">Determined to ensure Superman's ultimate sacrifice was not in vain, Bruce Wayne aligns forces with Diana Prince with plansto recruit a team of metahumans to protect the world from an approaching threat of catastrophic proportions.</div><div class="preview__buttons"><button class="preview__buttons-watch">Watch</button><button class="preview__buttons-more">More information</button></div></div><div class="preview__img"><img src="assets/images/banner.png" alt="banner"></div></div><div class="films"><a class="title" href="#">Trending TV Shows</a><div class="films__items"><div class="films__item"><a href="#"><img src="assets/images/1.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/3.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/4.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/5.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/6.png" alt="films"></a></div></div></div><div class="films"><a class="title" href="#">Trending Movies</a><div class="films__items"><div class="films__item"><a href="#"><img src="assets/images/1-2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/2-2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/3-2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/4-2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/5-2.png" alt="films"></a></div><div class="films__item"><a href="#"><img src="assets/images/6-2.png" alt="films"></a></div></div><button class="films__button">See more</button></div><div class="genres"><a class="title" href="#">Popular Genres</a><div class="genres__items"><div class="genres__item"><a href="#"><img src="assets/images/1-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/2-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/3-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/4-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/5-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/6-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/7-genres.png" alt=""></a></div><div class="genres__item"><a href="#"><img src="assets/images/8-genres.png" alt=""></a></div></div></div><div class="actors"><a class="title" href="#">Popular Actors &amp; Directors</a><div class="actors__items"><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-1.png" alt="actor"></a></div><div class="actors__name">Samantha Bowen</div></div><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-2.png" alt="actor"></a></div><div class="actors__name">Rhys Birch</div></div><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-3.png" alt="actor"></a></div><div class="actors__name">James Holloway</div></div><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-4.png" alt="actor"></a></div><div class="actors__name">Joshua Walton</div></div><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-5.png" alt="actor"></a></div><div class="actors__name">Patrick Elliott</div></div><div class="actors__item"><div class="actors__img"><a href="#"><img src="assets/images/actor-6.png" alt="actor"></a></div><div class="actors__name">Morgan O'Neill</div></div></div></div><div class="soon"><div class="soon__baner"><img src="assets/images/baner-2.png" alt="baner"></div><div class="soon__soon"><img src="assets/images/soon.png" alt="soon"></div></div><div class="register"><div class="register__text">Are You New Here ?<br>Don’t wait, Register Now.</div><div class="register__button">Register Now</div></div></div><footer class="footer"><div class="footer__container"><div class="footer__logo"><img src="assets/images/Logo-footer.svg" alt="Logo-footer"></div><div class="footer__links"><div class="footer__links-column"><a class="footer__link" href="#">Voice over and Subtitle</a><a class="footer__link" href="#">Media Center </a><a class="footer__link" href="#">Privacy</a><a class="footer__link" href="#">Contact us</a></div><div class="footer__links-column"><a class="footer__link" href="#">Voice Description</a><a class="footer__link" href="#">Investor Relations</a><a class="footer__link" href="#">Legal Provisions</a></div><div class="footer__links-column"><a class="footer__link" href="#">Help Center</a><a class="footer__link" href="#">Job Opportunities</a><a class="footer__link" href="#">Cookies Preferences</a></div><div class="footer__links-column"><a class="footer__link" href="#">Gift Cards</a><a class="footer__link" href="#">Terms of Use</a><a class="footer__link" href="#">Corporate Informations</a></div></div></div></footer></body></html>
